# libxaac

./: .gitignore  .gitmodules  .justfile  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakePresetsLinux.json  CMakePresetsWindows.json  Cargo.toml  RUST.migration.md  project_config.toml  requirements.txt
cmake/: utils.cmake
cmake/toolchains/cross/: linux-to-mingw.cmake
cmake/toolchains/native/: linux-clang.cmake  linux-gcc.cmake  windows-llvm.cmake  windows-msvc.cmake
common/: ixheaac_esbr_fft.c
decoder/: Cargo.toml  build.rs  ixheaacd_aac_imdct.c  ixheaacd_acelp_info.h  ixheaacd_basic_ops.c  ixheaacd_config.h  ixheaacd_drc_data_struct.h  ixheaacd_ec_defines.h  ixheaacd_ec_struct_def.h  ixheaacd_fft.c  ixheaacd_fft_ifft_32x32.c  ixheaacd_hybrid.h  ixheaacd_imdct.c  ixheaacd_interface.h  ixheaacd_lpc.c  ixheaacd_main.h  ixheaacd_mps_dec.h  ixheaacd_ps_dec.h  ixheaacd_qmf_dec.h  ixheaacd_sbr_rom.h  ixheaacd_sbrdecoder.h  ixheaacd_tns_usac.h  ixheaacd_vec_baisc_ops.h  ixheaacd_windows.h  libxaacdec.cmake
decoder/benches/: README.md  complex_fft_bench.rs  scale_down_bench.rs  windowing_bench.rs
decoder/src/: ixheaacd.rs  ixheaacd_basic_ops.rs  ixheaacd_fft.rs  ixheaacd_imdct.rs  ixheaacd_lpc.rs  ixheaacd_rom.rs  ixheaacd_windowing.rs  lib.rs
decoder/tests/fixtures/: acelp_imdct_1024.json  acelp_imdct_128.json  acelp_imdct_768.json  acelp_imdct_96.json  complex_fft_p2_128.json  complex_fft_p2_256.json  complex_fft_p2_512.json  complex_fft_p2_64.json  complex_fft_p2_edge.json  complex_fft_p2_edge1.json  complex_fft_p3_192.json  complex_fft_p3_192_inv.json  complex_fft_p3_384.json  complex_fft_p3_48.json  complex_fft_p3_48_inv.json  complex_fft_p3_768.json  complex_fft_p3_96.json  complex_fft_p3_96_edge.json  lpd_bpf_fix_branch1.json
docs/: claude_basic_ops_analysis.md  claude_basic_ops_offset_lengths_struct.txt  claude_basic_ops_summary.txt  claude_fft_functions_analysis.md  claude_imdct_analysis.md  claude_ixheaacd_lpd_bpf_fix_analysis.md  rovodev_cargo_convention.txt  rovodev_decoder_architecture.md  rovodev_decoder_core_aac_calltree.md  rovodev_encoder_architecture.md  rovodev_profiles.txt  rovodev_repo_statistics.txt
encoder/: libxaacenc.cmake
rust/: Cargo.toml  build.rs  lib.rs  rust-toolchain.toml
rust/src/common/: ixheaac_esbr_fft.rs  ixheaac_esbr_rom.rs  ixheaac_fft_ifft_32x32_rom.rs
rust/src/decoder/: ixheaacd_Windowing.rs  ixheaacd_aac_ec.rs  ixheaacd_aac_imdct.rs  ixheaacd_aac_rom.rs  ixheaacd_aac_tns.rs  ixheaacd_aacdecoder.rs  ixheaacd_aacpluscheck.rs  ixheaacd_acelp_bitparse.rs  ixheaacd_acelp_decode.rs  ixheaacd_acelp_mdct.rs  ixheaacd_acelp_tools.rs  ixheaacd_adts_crc_check.rs  ixheaacd_api.rs  ixheaacd_arith_dec.rs  ixheaacd_avq_dec.rs  ixheaacd_avq_rom.rs  ixheaacd_basic_funcs.rs  ixheaacd_basic_ops.rs  ixheaacd_bitbuffer.rs  ixheaacd_block.rs  ixheaacd_channel.rs  ixheaacd_common_initfuncs.rs  ixheaacd_common_lpfuncs.rs  ixheaacd_common_rom.rs  ixheaacd_create.rs  ixheaacd_decode_main.rs  ixheaacd_drc_freq_dec.rs  ixheaacd_dsp_fft32x32s.rs  ixheaacd_ec_rom.rs  ixheaacd_env_calc.rs  ixheaacd_env_dec.rs  ixheaacd_env_extr.rs  ixheaacd_esbr_envcal.rs  ixheaacd_esbr_polyphase.rs  ixheaacd_ext_ch_ele.rs  ixheaacd_fft.rs  ixheaacd_fft_ifft_32x32.rs  ixheaacd_freq_sca.rs  ixheaacd_fwd_alias_cnx.rs  ixheaacd_hbe_dft_trans.rs  (+80 more)
rust/src/decoder/drc_src/: impd_drc_api.rs  impd_drc_bitbuffer.rs  impd_drc_dec.rs  impd_drc_dynamic_payload.rs  impd_drc_eq.rs  impd_drc_extr_delta_coded_info.rs  impd_drc_filter_bank.rs  impd_drc_gain_dec.rs  impd_drc_gain_decoder.rs  impd_drc_init.rs  impd_drc_interface_decoder.rs  impd_drc_loudness_control.rs  impd_drc_main_td_process.rs  impd_drc_multiband.rs  impd_drc_parametric_dec.rs  impd_drc_peak_limiter.rs  impd_drc_process.rs  impd_drc_rom.rs  impd_drc_selection_process.rs  impd_drc_selection_process_drcset_selection.rs  impd_drc_selection_process_init.rs  impd_drc_shape_filter.rs  impd_drc_static_payload.rs
rust/src/decoder/generic/: ixheaacd_qmf_dec_generic.rs
rust/src/decoder/x86/: ixheaacd_function_selector_x86.rs
rust/src/test/decoder/: ixheaacd_error.rs  ixheaacd_fileifc.rs  ixheaacd_main.rs  ixheaacd_metadata_read.rs
test/basic_ops/: CMakeLists.txt  Cargo.toml  main.c  main.rs
test/data/: aac_profiles.txt  test2_aot29_adts.aac  test2_aot42.aac  test2_aot42.txt  test5_aot42_0.aac  test5_aot42_0.txt
test/decoder/: xaacdec.cmake
test/encoder/: ixheaace_testbench.c  xaacenc.cmake
