[workspace]
members = [
]
[package]
name = "rust"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

#[lib]
#name = "rust"
#path = "lib.rs"
#crate-type = ["staticlib", "rlib"]
[[bin]]
path = "src/test/decoder/ixheaacd_main.rs"
name = "ixheaacd_main_rust"

[features]
legacy-build = [] # TODO: leverage for linking to C vs. Rust lib when both work

[dependencies]

[build-dependencies]
cmake = "0.1.57"
